plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.11'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

ext {
    queryDslVersion = "5.1.0"
}

group = 'com.sprint.mission'
version = '0.0.1-SNAPSHOT'
description = 'ChoiJiHye\'s Personal Project: [Ch-at] - [chatting]'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

jacocoTestReport {
    dependsOn test

    classDirectories.setFrom(
            files(classDirectories.files.collect {
                fileTree(dir: it, excludes: [
                        '**/Q*.class',
                        '**/*Application.class',
                        '**/*Config.class',
                        '**/*Dto.class',
                        '**/*Request.class',
                        '**/*Response.class',
                        '**/*Exception.class',
                        '**/generated/**',
                        '**/dto/**',
                        '**/vo/**'
                ])
            })
    )

    reports {
        html.required = true
        xml.required = true
        csv.required = true
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // QueryDSL JPA 의존성
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

    // Annotation Processor
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Caffeine Cache
    implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"

    // Apache Commons Lang 최신 버전 강제
    implementation 'org.apache.commons:commons-lang3:3.19.0'

    // CVE 대응용 constraints (하위 라이브러리 버전 덮어쓰기)
    constraints {
        implementation('org.apache.commons:commons-lang3:3.19.0')
    }

    // Swagger/OpenAPI 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'


    // 테스트 시에도 Lombok 사용
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

tasks.named('test') {
    useJUnitPlatform()
}


